fix alignment of 'article-header' to be left aligned for english and right for hebrew

--- a/app/styles/_homepage.scss
+++ b/app/styles/_homepage.scss
@@ -233,7 +233,6 @@
     float: right;
 }
 .lergo-h0.text-tweak1 {
-    float: right;
     margin-bottom: 5px
 }
 
