--- a/app/styles/_rtl_homepage.scss
+++ b/app/styles/_rtl_homepage.scss
@@ -28,7 +28,7 @@
     }
     .article-header {
       text-align: right;
-      margin-right: 50px;
+     /* margin-right: 50px;*/
 
       .stats-lessons {
         width: 114px;
@@ -52,11 +52,6 @@
             }
         }
     }
-    .lergo-h0.text-tweak1 {
-        float: left;
-        /*margin-bottom: 5px*/
-    }
-
 }
 
 
